RESOLVED FIXED274025
`m_maxMessageSize` should be `infinity()` instead of `max()` in RTCSctpTransport.h
https://bugs.webkit.org/show_bug.cgi?id=274025
Summary `m_maxMessageSize` should be `infinity()` instead of `max()` in RTCSctpTransp...
Ahmad Saleem
Reported 2024-05-10 18:28:59 PDT
Hi Team, While trying to investigate our 'Safari' (WebKit) specific failures, I noticed that we are failing few tests here: WPT Test Case: https://wpt.fyi/results/webrtc/RTCSctpTransport-maxMessageSize.html?label=master&label=experimental&aligned=&q=firefox%3Apass+safari%3Afail In order to investigate, I noted that we have following: Source: https://searchfox.org/wubkat/rev/5169139ac1127c419017b37d9f2106a2c199070f/Source/WebCore/Modules/mediastream/RTCSctpTransport.h#76 double m_maxMessageSize { std::numeric_limits<double>::max() }; While as per web-specification: https://w3c.github.io/webrtc-pc/#dfn-update-the-data-max-message-size If both remoteMaxMessageSize and canSendSize are 0, set [[MaxMessageSize]] to the positive Infinity value. Changing above to: double m_maxMessageSize { std::numeric_limits<double>::infinity() }; leads to us, progressing one more WPT (following - max-message-size with a (non-zero) value larger than canSendSize provided by the remote peer). Just raising so we can fix at least one test. Thanks!
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-17 18:29:15 PDT
EWS
Comment 2 2024-05-21 00:02:29 PDT
Committed 279039@main (868f20242ed9): <https://commits.webkit.org/279039@main> Reviewed commits have been landed. Closing PR #28752 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.